--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,19 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
 @import url('./container.css');
-@import url('./animations.css');
+@import url('./visually-hidden.css');
+@import url('./var.css');
 
 /* Sections style */
 @import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
+
+@import url('./hero.css');
+@import url('./about.css');
+@import url('./lessons.css');
+@import url('./proposal.css');
+@import url('./teachers.css');
+@import url('./application-form.css');
+@import url('./feedback.css');
+
 @import url('./footer.css');
