--- a/src/css/var.css
+++ b/src/css/var.css
@@ -37,6 +37,21 @@
     var(--green-30) 100%
   );
 
+  /* Container Width*/
+  --container-sm: 375x; /* max-width for mobile */
+  --container-md: 768px; /* max-width for tablet */
+  --container-lg: 1280px; /* max-width for desktop */
+
+  /* Container padding*/
+  --container-pd-sm: 0 20px; /* padding for mobile */
+  --container-pd-md: 0 32px; /* padding for tablet */
+  --container-pd-lg: 0 128px; /* padding for desktop */
+
+  /* Section margin - margin-bottom between sections*/
+  --margin-bottom-sm: 80px /* for mobile */
+  --margin-bottom-md: 100px; /* tablet */
+  --margin-bottom-lg: 150px; /*desktop */
+
   /* ⚡ Animation */
   --transition-base: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
