change feedback to reviews

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,6 @@
 @import url('./proposal.css');
 @import url('./teachers.css');
 @import url('./application-form.css');
-@import url('./feedback.css');
+@import url('./reviews.css');
 
 @import url('./footer.css');
