--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,1 +1,9 @@
-<section></section>
+<section class="section">
+  <div class="container">
+    <h2 class="section-title">About <span class="text-decor">Us</span></h2>
+    <p class="section-text-support">
+      We are dedicated to providing engaging and effective English language
+      courses in a supportive and stimulating learning environment
+    </p>
+  </div>
+</section>
