--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -1,1 +1,11 @@
-<section></section>
+<section class="section">
+  <div class="container">
+    <h2 class="section-title">
+      What our <span class="text-decor">students </span> say
+    </h2>
+    <p class="section-text-support">
+      Hear from our students about their learning journey with us, as they share
+      their experiences, progress, and the transformative impact
+    </p>
+  </div>
+</section>
