--- a/src/partials/teachers.html
+++ b/src/partials/teachers.html
@@ -1,1 +1,11 @@
-<section></section>
+<section class="section">
+  <div class="container">
+    <h2 class="section-title">
+      Meet our <span class="text-decor">teachers</span>
+    </h2>
+    <p class="section-text-support">
+      Discover our team of dedicated educators, committed to guiding you on your
+      journey to English proficiency with personalized and engaging instruction
+    </p>
+  </div>
+</section>
