--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,12 +1,12 @@
 :root {
   /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
   font-family: 'Manrope', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
+  font-size: 14px;
+  line-height: 1.71;
   font-weight: 400;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  color: var(--text-primary);
+  background-color: var(--bg-main);
 
   font-optical-sizing: auto;
   font-synthesis: none;
@@ -32,5 +32,111 @@ main:has(.back-link) {
   text-align: center;
 }
 
-.section-header {
+.section {
+  padding: var(--container-pd-sm);
+}
+
+.section-title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 1.125;
+  letter-spacing: -0.02em;
+  text-align: center;
+  color: var(--text-secondary);
+  margin-bottom: 16px;
+}
+
+.section-title .text-decor {
+  position: relative;
+  display: inline-block;
+}
+
+.section-title .text-decor::before {
+  content: '';
+  display: block;
+  border-radius: 8px;
+  width: 100%;
+  height: 12px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: var(--green-30);
+  z-index: -1;
+}
+
+.section-text-support {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+}
+
+.button {
+  background-color: var(--bg-accent);
+  color: var(--text-invert);
+  border-radius: 12px;
+  padding: 14px;
+  width: 100%;
+  transition: background-color var(--transition-base);
+}
+
+.button:hover,
+.button:active {
+  background-color: var(--bg-accent-hover);
+}
+
+.button-white {
+  border: 1px solid var(--gray);
+  transition: background-color var(--transition-base),
+    color var(--transition-base);
+}
+
+.button.button-white:hover,
+.button.button-white:active {
+  color: var(--green-100);
+  background-color: var(--bg-main);
+}
+
+/* Styles for Tablet devices */
+@media only screen and (min-width: 768px) {
+  :root {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+  .section {
+    padding: var(--container-pd-md);
+  }
+
+  .section-title {
+    font-size: 40px;
+    line-height: 1.2;
+  }
+
+  .section-title .text-decor::before {
+    height: 16px;
+  }
+
+  .section-text-support {
+    font-size: 18px;
+  }
+
+  .button {
+    font-size: 18px;
+    width: auto;
+    padding: 16px 64px;
+  }
+}
+/* Styles for Desktop devices */
+@media only screen and (min-width: 1280px) {
+  .section {
+    padding: var(--container-pd-lg);
+  }
+
+  .section-text-support {
+    line-height: 1.66667;
+  }
 }
