--- a/src/partials/application-form.html
+++ b/src/partials/application-form.html
@@ -1,1 +1,11 @@
-<section></section>
+<section class="section">
+  <div class="container">
+    <h2 class="section-title">
+      Leave an <span class="text-decor">application</span>
+    </h2>
+    <p class="section-text-support">
+      Please use the form below to contact us. Enter your name, email, and
+      message and we'll get back to you shortly.
+    </p>
+  </div>
+</section>
