--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,7 @@
 
 /* Sections style */
 @import url('./header.css');
+@import url('./modal-menu.css');
 
 @import url('./hero.css');
 @import url('./about.css');
