--- a/src/partials/modal-menu.html
+++ b/src/partials/modal-menu.html
@@ -1,1 +1,55 @@
-<div class="mobile-menu"></div>
+<!-- <div class="mobile-menu">123</div> -->
+<div class="modal-overlay" data-menu>
+  <div class="modal">
+    <button class="modal-close-btn" type="button" data-menu-close>
+      <svg class="burger-icon" width="32" height="32">
+        <use href="img/sprite.svg#close"></use>
+      </svg>
+    </button>
+    <ul class="nav-list">
+      <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
+      <li class="nav-item"><a class="nav-link" href="">Our lessons</a></li>
+      <li class="nav-item"><a class="nav-link" href="">Teachers</a></li>
+      <li class="nav-item"><a class="nav-link" href="">Reviews</a></li>
+      <li class="nav-item"><a class="nav-link" href="">Contact us</a></li>
+    </ul>
+    <ul class="social-list">
+      <li>
+        <a
+          href="https://www.facebook.com/goITclub/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="social-link"
+        >
+          <svg width="28" height="28" class="social-icon">
+            <use href="/img/sprite.svg#facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://www.instagram.com/goitclub/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="social-link"
+        >
+          <svg width="28" height="28" class="social-icon">
+            <use href="/img/sprite.svg#instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://www.youtube.com/c/GoIT"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="social-link"
+        >
+          <svg width="28" height="28" class="social-icon">
+            <use href="/img/sprite.svg#youtube"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
