--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -1,1 +1,32 @@
-<section></section>
+<section class="proposal-section">
+  <div class="container">
+    <div class="proposal-container">
+      <div class="proposal-thumb">
+        <div class="proposal-thumb-content">
+          <h2 class="proposal-title">Power of English</h2>
+          <ul class="proposal-list">
+            <li class="proposal-item">
+              <p class="proposal-text">
+                Dive into captivating lessons designed to stimulate your
+                curiosity.
+              </p>
+            </li>
+            <li class="proposal-item">
+              <p class="proposal-text">
+                Learn in a nurturing setting where every student's progress
+                matters.
+              </p>
+            </li>
+            <li class="proposal-item">
+              <p class="proposal-text">
+                Experience the satisfaction of real progress as your language
+                skills and confidence grow with every session.
+              </p>
+            </li>
+          </ul>
+          <button class="button" type="button">Leave an application</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
