--- a/src/css/proposal.css
+++ b/src/css/proposal.css
@@ -5,33 +5,88 @@
   padding: 40px 20px 64px 20px;
   border-radius: 16px;
   background: var(--bg-proposal-gd);
+  overflow: hidden;
+}
+
+@media only screen and (min-width: 768px) {
+  .proposal-container {
+    padding: 64px 32px 92px 32px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .proposal-container {
+    padding: 64px 64px 141px 64px;
+  }
+}
+
+.proposal-title {
+  font-size: 38px;
+  font-weight: 700;
+  line-height: 40px;
+  color: var(--text-invert);
+  margin-bottom: 65px;
+
+  span {
+    color: var(--green-30);
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .proposal-title {
+    font-size: 60px;
+    line-height: 70px;
+    margin-bottom: 83px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .proposal-title {
+    width: 776px;
+    margin-bottom: 133px;
+  }
 }
 .proposal-thumb {
   position: relative;
   padding: 40px 20.85px 40px 19.15px;
   border-radius: 16px;
   background-color: var(--white);
-  z-index: 1;
 }
 
-.proposal-thumb-content {
-  position: relative; /* контент над псевдоелементами */
-  z-index: 1;
+@media only screen and (min-width: 768px) {
+  .proposal-thumb {
+    padding: 64.92px 31.93px 63.08px 31.93px;
+    display: flex;
+    align-items: center;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .proposal-thumb {
+    padding: 64.87px 64px 63.13px 64px;
+  }
 }
 
-/* .proposal-thumb::after {
+.proposal-decoration-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+/* .proposal-decoration-bg::after {
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--green-25);
+  background-color: #d4fde1;
   border-radius: 16px;
-  transform: rotate(9deg);
-  z-index: 0;
+  transform: rotate(-11deg);
+  z-index: -2;
 } */
-.proposal-thumb::before {
+
+/* .proposal-decoration-bg::before {
   content: '';
   position: absolute;
   top: 0;
@@ -40,27 +95,63 @@
   height: 100%;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 16px;
-  transform: rotate(-11deg);
+  transform: rotate(9deg);
   z-index: -1;
-}
+} */
 
-.proposal-title {
+.proposal-subtitle {
   font-size: 20px;
   line-height: 24px;
   letter-spacing: -0.4px;
   margin-bottom: 20px;
   color: var(--text-secondary);
 }
+
+@media only screen and (min-width: 768px) {
+  .proposal-subtitle {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: -0.8px;
+    margin-bottom: 32px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .proposal-subtitle {
+    margin-bottom: 42px;
+  }
+}
 .proposal-list {
   margin-bottom: 20px;
 }
+
+@media only screen and (min-width: 768px) {
+  .proposal-list {
+    margin-bottom: 32px;
+    /* max-width: 451px; */
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .proposal-list {
+    margin-bottom: 39px;
+  }
+}
+
 .proposal-item {
-  position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .proposal-item:not(:last-child) {
   margin-bottom: 16px;
 }
+
+@media only screen and (min-width: 1280px) {
+  .proposal-item:not(:last-child) {
+    margin-bottom: 18px;
+  }
+}
+
 .proposal-text {
   font-weight: 700;
   line-height: 1.42;
@@ -68,12 +159,79 @@
   color: var(--text-secondary);
 }
 
-/* .proposal-text::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
+@media only screen and (min-width: 768px) {
+  .proposal-text {
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: -0.4px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .proposal-text {
+  }
+}
+
+.proposal-wrap-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
   width: 20px;
   height: 20px;
+  border-radius: 50%;
+  margin-right: 8px;
+  background-color: var(--green-50);
+}
+
+@media only screen and (min-width: 768px) {
+  .proposal-wrap-icon {
+    width: 28px;
+    height: 28px;
+    margin-right: 16px;
+  }
+}
+.proposal-icon {
+  width: 12px;
+  height: 12px;
+}
+
+@media only screen and (min-width: 768px) {
+  .proposal-icon {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+.proposal-img-wrap {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .proposal-img-wrap {
+    display: block;
+    width: 160px;
+    align-self: end;
+    position: relative;
+    left: 20px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .proposal-img-wrap {
+    width: 214px;
+    left: 65px;
+  }
+}
+
+.proposal-img {
+  max-width: none;
+}
+/* .proposal-text::before {
+  content: '';
+  display: flex;
+  flex-shrink: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 8px;
   background-color: var(--green-50);
 } */
