--- a/src/css/header.css
+++ b/src/css/header.css
@@ -51,10 +51,13 @@
   padding: 20px 0;
 }
 
+.header-container .social-link {
+  border: var(--black-10) 1px solid;
+}
+
 .header-container .social-icon {
   fill: var(--black);
   opacity: 0.8;
-  border: var(--black-10) 1px solid;
 }
 
 /* Styles for Desktop devices */
