--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -28,64 +28,11 @@
       </div>
       <div>
         <nav>
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a href="#about" class="nav-link">About us</a>
-            </li>
-            <li class="nav-item">
-              <a href="#lessons" class="nav-link">Our lessons</a>
-            </li>
-            <li class="nav-item">
-              <a href="#teachers" class="nav-link">Teachers</a>
-            </li>
-            <li class="nav-item">
-              <a href="reviews" class="nav-link">Reviews</a>
-            </li>
-            <li class="nav-item">
-              <a href="#feedback-form" class="nav-link">Contact us</a>
-            </li>
-          </ul>
+          <load src="/partials/nav-list.html" list-class="nav-list" />
         </nav>
       </div>
       <div>
-        <ul class="social-list">
-          <li>
-            <a
-              href="https://www.facebook.com/goITclub/"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="social-link"
-            >
-              <svg width="28" height="28" class="social-icon">
-                <use href="../img/sprite.svg#facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/goitclub/"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="social-link"
-            >
-              <svg width="28" height="28" class="social-icon">
-                <use href="../img/sprite.svg#instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://www.youtube.com/c/GoIT"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="social-link"
-            >
-              <svg width="28" height="28" class="social-icon">
-                <use href="../img/sprite.svg#youtube"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <load src="/partials/socials.html" />
       </div>
     </div>
     <div class="footer-bottom">
