--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,55 +1,12 @@
 <header class="header">
   <div class="container header-container">
     <nav class="nav-header">
-      <a class="logo" href="./index.html" aria-label="Site logo">
+      <a class="logo" href="/" aria-label="Site logo">
         english<span class="logo-accent">excellence</span>.
       </a>
-      <ul class="header-nav-list">
-        <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Our lessons</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Teachers</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Reviews</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Contact us</a></li>
-      </ul>
+      <load src="/partials/nav-list.html" list-class="header-nav-list" />
     </nav>
-    <ul class="social-list">
-      <li>
-        <a
-          href="https://www.facebook.com/goITclub/"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="social-link"
-        >
-          <svg width="28" height="28" class="social-icon">
-            <use href="/img/sprite.svg#facebook"></use>
-          </svg>
-        </a>
-      </li>
-      <li>
-        <a
-          href="https://www.instagram.com/goitclub/"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="social-link"
-        >
-          <svg width="28" height="28" class="social-icon">
-            <use href="/img/sprite.svg#instagram"></use>
-          </svg>
-        </a>
-      </li>
-      <li>
-        <a
-          href="https://www.youtube.com/c/GoIT"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="social-link"
-        >
-          <svg width="28" height="28" class="social-icon">
-            <use href="/img/sprite.svg#youtube"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
+    <load src="/partials/socials.html" />
     <button class="burger-btn" type="button" data-menu-open>
       <svg class="burger-icon" width="32" height="32">
         <use href="img/sprite.svg#burger"></use>
