--- a/src/css/proposal.css
+++ b/src/css/proposal.css
@@ -1,6 +1,3 @@
-.proposal-section {
-}
-
 .proposal-container {
   padding: 40px 20px 64px 20px;
   border-radius: 16px;
@@ -49,6 +46,7 @@
   padding: 40px 20.85px 40px 19.15px;
   border-radius: 16px;
   background-color: var(--white);
+  z-index: 5;
 }
 
 @media only screen and (min-width: 768px) {
@@ -73,7 +71,7 @@
   z-index: -1;
 }
 
-/* .proposal-decoration-bg::after {
+.proposal-decoration-bg::after {
   content: '';
   position: absolute;
   top: 0;
@@ -84,9 +82,9 @@
   border-radius: 16px;
   transform: rotate(-11deg);
   z-index: -2;
-} */
+}
 
-/* .proposal-decoration-bg::before {
+.proposal-decoration-bg::before {
   content: '';
   position: absolute;
   top: 0;
@@ -96,8 +94,8 @@
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 16px;
   transform: rotate(9deg);
-  z-index: -1;
-} */
+  z-index: 0;
+}
 
 .proposal-subtitle {
   font-size: 20px;
