--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -3,7 +3,12 @@
 }
 .hero .container {
   position: relative;
-  background-image: url('../img/hero/hero-sm@1x.jpg');
+  background-image: linear-gradient(
+      357deg,
+      rgba(0, 0, 0, 0.4) 39.23%,
+      rgba(0, 0, 0, 0) 66.28%
+    ),
+    url('../img/hero/hero-sm@1x.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -13,25 +18,45 @@
 }
 @media (min-resolution: 192dpi) {
   .hero .container {
-    background-image: url('../img/hero/hero-sm@2x.jpg');
+    background-image: linear-gradient(
+        357deg,
+        rgba(0, 0, 0, 0.4) 39.23%,
+        rgba(0, 0, 0, 0) 66.28%
+      ),
+      url('../img/hero/hero-sm@2x.jpg');
   }
 }
 @media screen and (min-width: 768px) {
   .hero .container {
-    background-image: url(../img/hero/hero-md@1x.jpg);
+    background-image: linear-gradient(
+        96deg,
+        rgba(0, 0, 0, 0.4) 36.36%,
+        rgba(0, 0, 0, 0) 51.43%
+      ),
+      url(../img/hero/hero-md@1x.jpg);
     max-width: 704px;
     padding: 260px 32px 295px;
   }
 }
 @media only screen and (min-width: 768px) and (min-resolution: 192dpi) {
   .hero .container {
-    background-image: url(../img/hero/hero-md@2x.jpg);
+    background-image: linear-gradient(
+        96deg,
+        rgba(0, 0, 0, 0.4) 36.36%,
+        rgba(0, 0, 0, 0) 51.43%
+      ),
+      url(../img/hero/hero-md@2x.jpg);
   }
 }
 
 @media screen and (min-width: 1280px) {
   .hero .container {
-    background-image: url(../img/hero/hero-lg@1x.jpg);
+    background-image: linear-gradient(
+        96deg,
+        rgba(0, 0, 0, 0.4) 36.36%,
+        rgba(0, 0, 0, 0) 51.43%
+      ),
+      url(../img/hero/hero-lg@1x.jpg);
     max-width: 1152px;
     padding: 164px 64px 163px;
   }
@@ -75,12 +100,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  fill: var(--green-50);
   transform: translateX(50%) translateY(50%);
 }
 @media screen and (min-width: 1280px) {
   .arrow-down:hover,
   .arrow-down:focus {
     background-color: var(--green-50);
+    fill: var(--white);
   }
 }
 .hero-btn {
