--- a/src/css/proposal.css
+++ b/src/css/proposal.css
@@ -28,6 +28,10 @@
   }
 }
 
+.proposal-stack {
+  position: relative;
+}
+
 @media only screen and (min-width: 768px) {
   .proposal-title {
     font-size: 60px;
@@ -68,7 +72,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
 }
 
 .proposal-decoration-bg::after {
@@ -78,10 +81,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #d4fde1;
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 16px;
-  transform: rotate(-11deg);
-  z-index: -2;
+
+  transform: rotate(9deg);
 }
 
 .proposal-decoration-bg::before {
@@ -91,10 +94,30 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.5);
+
+  background-color: #d4fde1;
+
   border-radius: 16px;
-  transform: rotate(9deg);
-  z-index: 0;
+  transform: rotate(-11deg);
+}
+
+@media only screen and (min-width: 768px) {
+  .proposal-decoration-bg::after {
+    transform: rotate(10deg);
+  }
+
+  .proposal-decoration-bg::before {
+    transform: rotate(-11deg);
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .proposal-decoration-bg::after {
+    transform: rotate(11deg);
+  }
+
+  .proposal-decoration-bg::before {
+    transform: rotate(-8deg);
+  }
 }
 
 .proposal-subtitle {
