--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -4,61 +4,63 @@
       <h2 class="proposal-title">
         Master the <span>Language</span> with Our English Package!
       </h2>
-      <div class="proposal-thumb">
+      <div class="proposal-stack">
+        <div class="proposal-thumb">
+          <div class="proposal-info">
+            <h3 class="proposal-subtitle">Power of English</h3>
+            <ul class="proposal-list">
+              <li class="proposal-item">
+                <div class="proposal-wrap-icon">
+                  <svg class="proposal-icon" width="20" height="20">
+                    <use href="./img/sprite.svg#check"></use>
+                  </svg>
+                </div>
+                <p class="proposal-text">
+                  Dive into captivating lessons designed to stimulate your
+                  curiosity.
+                </p>
+              </li>
+              <li class="proposal-item">
+                <div class="proposal-wrap-icon">
+                  <svg class="proposal-icon" width="20" height="20">
+                    <use href="./img/sprite.svg#check"></use>
+                  </svg>
+                </div>
+                <p class="proposal-text">
+                  Learn in a nurturing setting where every student's progress
+                  matters.
+                </p>
+              </li>
+              <li class="proposal-item">
+                <div class="proposal-wrap-icon">
+                  <svg class="proposal-icon" width="20" height="20">
+                    <use href="./img/sprite.svg#check"></use>
+                  </svg>
+                </div>
+                <p class="proposal-text">
+                  Experience the satisfaction of real progress as your language
+                  skills and confidence grow with every session.
+                </p>
+              </li>
+            </ul>
+            <button class="button" type="button">Leave an application</button>
+          </div>
+          <div class="proposal-img-wrap">
+            <img
+              class="proposal-img"
+              srcset="
+                ./img/proposal/books@1x.png 1x,
+                ./img/proposal/books@2x.png 2x
+              "
+              src="../img/proposal/books@1x.png"
+              alt="image of books"
+              width="214"
+              height="263"
+              loading="lazy"
+            />
+          </div>
+        </div>
         <div class="proposal-decoration-bg"></div>
-        <div class="proposal-info">
-          <h3 class="proposal-subtitle">Power of English</h3>
-          <ul class="proposal-list">
-            <li class="proposal-item">
-              <div class="proposal-wrap-icon">
-                <svg class="proposal-icon" width="20" height="20">
-                  <use href="./img/sprite.svg#check"></use>
-                </svg>
-              </div>
-              <p class="proposal-text">
-                Dive into captivating lessons designed to stimulate your
-                curiosity.
-              </p>
-            </li>
-            <li class="proposal-item">
-              <div class="proposal-wrap-icon">
-                <svg class="proposal-icon" width="20" height="20">
-                  <use href="./img/sprite.svg#check"></use>
-                </svg>
-              </div>
-              <p class="proposal-text">
-                Learn in a nurturing setting where every student's progress
-                matters.
-              </p>
-            </li>
-            <li class="proposal-item">
-              <div class="proposal-wrap-icon">
-                <svg class="proposal-icon" width="20" height="20">
-                  <use href="./img/sprite.svg#check"></use>
-                </svg>
-              </div>
-              <p class="proposal-text">
-                Experience the satisfaction of real progress as your language
-                skills and confidence grow with every session.
-              </p>
-            </li>
-          </ul>
-          <button class="button" type="button">Leave an application</button>
-        </div>
-        <div class="proposal-img-wrap">
-          <img
-            class="proposal-img"
-            srcset="
-              ./img/proposal/books@1x.png 1x,
-              ./img/proposal/books@2x.png 2x
-            "
-            src="../img/proposal/books@1x.png"
-            alt="image of books"
-            width="214"
-            height="263"
-            loading="lazy"
-          />
-        </div>
       </div>
     </div>
   </div>
