--- a/src/css/proposal.css
+++ b/src/css/proposal.css
@@ -223,6 +223,12 @@
   }
 }
 
+@media only screen and (min-width: 768px) {
+  .proposal-link-thumb {
+    width: 306px;
+  }
+}
+
 .proposal-img-wrap {
   display: none;
 }
