--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -43,7 +43,10 @@
                 </p>
               </li>
             </ul>
-            <button class="button" type="button">Leave an application</button>
+            <!-- <a class="button" type="button">Leave an application</a> -->
+            <div class="proposal-link-thumb">
+              <a class="link-button" href="#">Leave an application</a>
+            </div>
           </div>
           <div class="proposal-img-wrap">
             <img
