--- a/src/css/proposal.css
+++ b/src/css/proposal.css
@@ -81,9 +81,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: #ffffff80;
   border-radius: 16px;
-
   transform: rotate(9deg);
 }
 
@@ -94,9 +93,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-
-  background-color: #d4fde1;
-
+  background-color: var(--green-25);
   border-radius: 16px;
   transform: rotate(-11deg);
 }
@@ -149,7 +146,6 @@
 @media only screen and (min-width: 768px) {
   .proposal-list {
     margin-bottom: 32px;
-    /* max-width: 451px; */
   }
 }
 @media only screen and (min-width: 1280px) {
@@ -172,7 +168,6 @@
     margin-bottom: 18px;
   }
 }
-
 .proposal-text {
   font-weight: 700;
   line-height: 1.42;
@@ -185,10 +180,6 @@
     font-size: 20px;
     line-height: 24px;
     letter-spacing: -0.4px;
-  }
-}
-@media only screen and (min-width: 1280px) {
-  .proposal-text {
   }
 }
 
@@ -252,13 +243,3 @@
 .proposal-img {
   max-width: none;
 }
-/* .proposal-text::before {
-  content: '';
-  display: flex;
-  flex-shrink: 0;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  margin-right: 8px;
-  background-color: var(--green-50);
-} */
