add logo component and transition for hero

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,9 +2,7 @@
   <div class="container">
     <div class="footer-top">
       <div class="left-content">
-        <a href="/" class="footer-logo"
-          >english<span class="footer-logo-accent">excellence</span>.</a
-        >
+        <load src="/partials/logo.html" list-class="footer-logo" />
         <address>
           <ul class="address-list">
             <li class="address-item">
