--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,10 +4,10 @@
       Discover the joy of learning
       <span class="title-accent">English</span> with us!
     </h1>
-    <a href="" class="button hero-btn">Leave an application</a>
-    <a href="" class="arrow-down">
+    <a href="#application-form" class="button hero-btn">Leave an application</a>
+    <a href="#footer" class="arrow-down">
       <svg class="arrow-down-icon" width="20" height="20">
-        <use href="../img/sprite.svg#arrow-down"></use>
+        <use href="/img/sprite.svg#arrow-down"></use>
       </svg>
     </a>
   </div>
