--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -102,6 +102,8 @@
   justify-content: center;
   fill: var(--green-50);
   transform: translateX(50%) translateY(50%);
+  transition: background-color var(--transition-base),
+    fill var(--transition-base);
 }
 @media screen and (min-width: 1280px) {
   .arrow-down:hover,
