--- a/src/partials/teachers.html
+++ b/src/partials/teachers.html
@@ -11,13 +11,13 @@
       <li class="t-card">
         <img
           srcset="
-            ../img/teachers/maria@1x.jpg  1x,
-            ../img/teachers/maria@2x.jpg  2x,
-            ../img/teachers/maria@1x.avif 1x,
-            ../img/teachers/maria@2x.avif 2x
+            /img/teachers/maria@1x.jpg  1x,
+            /img/teachers/maria@2x.jpg  2x,
+            /img/teachers/maria@1x.avif 1x,
+            /img/teachers/maria@2x.avif 2x
           "
           class="t-card-image"
-          src="../img/teachers/maria@1x.jpg"
+          src="/img/teachers/maria@1x.jpg"
           alt="Maria"
           width="150"
           height="150"
@@ -32,13 +32,13 @@
       <li class="t-card">
         <img
           srcset="
-            ../img/teachers/artem@1x.jpg  1x,
-            ../img/teachers/artem@2x.jpg  2x,
-            ../img/teachers/artem@1x.avif 1x,
-            ../img/teachers/artem@2x.avif 2x
+            /img/teachers/artem@1x.jpg  1x,
+            /img/teachers/artem@2x.jpg  2x,
+            /img/teachers/artem@1x.avif 1x,
+            /img/teachers/artem@2x.avif 2x
           "
           class="t-card-image"
-          src="../img/teachers/artem@1x.jpg"
+          src="/img/teachers/artem@1x.jpg"
           alt="Artem"
           width="150"
           height="150"
@@ -53,13 +53,13 @@
       <li class="t-card">
         <img
           srcset="
-            ../img/teachers/ilona@1x.jpg  1x,
-            ../img/teachers/ilona@2x.jpg  2x,
-            ../img/teachers/ilona@1x.avif 1x,
-            ../img/teachers/ilona@2x.avif 2x
+            /img/teachers/ilona@1x.jpg  1x,
+            /img/teachers/ilona@2x.jpg  2x,
+            /img/teachers/ilona@1x.avif 1x,
+            /img/teachers/ilona@2x.avif 2x
           "
           class="t-card-image"
-          src="../img/teachers/ilona@1x.jpg"
+          src="/img/teachers/ilona@1x.jpg"
           alt="Ilona"
           width="150"
           height="150"
@@ -75,13 +75,13 @@
       <li class="t-card">
         <img
           srcset="
-            ../img/teachers/volodymyr@1x.jpg  1x,
-            ../img/teachers/volodymyr@2x.jpg  2x,
-            ../img/teachers/volodymyr@1x.avif 1x,
-            ../img/teachers/volodymyr@2x.avif 2x
+            /img/teachers/volodymyr@1x.jpg  1x,
+            /img/teachers/volodymyr@2x.jpg  2x,
+            /img/teachers/volodymyr@1x.avif 1x,
+            /img/teachers/volodymyr@2x.avif 2x
           "
           class="t-card-image"
-          src="../img/teachers/volodymyr@1x.jpg"
+          src="/img/teachers/volodymyr@1x.jpg"
           alt="Volodymyr"
           width="150"
           height="150"
