--- a/src/css/base.css
+++ b/src/css/base.css
@@ -16,6 +16,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   display: flex;
   flex-direction: column;
