update common styles, perfect-pixel header and hero section

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,5 +1,4 @@
 :root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
   font-family: 'Manrope', sans-serif;
   font-size: 14px;
   line-height: 1.71;
@@ -23,7 +22,6 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  /* min-width: 100vw; */
   min-height: 100vh;
   margin: 0;
 }
@@ -36,12 +34,8 @@ body:has(.is-open) {
   overflow-y: hidden;
 }
 
-main:has(.back-link) {
-  text-align: center;
-}
-
 .section {
-  padding: var(--container-pd-sm);
+  padding: var(--section-pd-sm);
 }
 
 .section-title {
@@ -77,115 +71,6 @@ main:has(.back-link) {
   margin-bottom: 40px;
 }
 
-button {
-  border: none;
-  cursor: pointer;
-  background-color: transparent;
-}
-
-.button {
-  background-color: var(--bg-accent);
-  color: var(--text-invert);
-  border-radius: 12px;
-  padding: 14px;
-  width: 100%;
-  transition: background-color var(--transition-base);
-}
-
-.button:hover,
-.button:active {
-  background-color: var(--bg-accent-hover);
-}
-
-.button-white {
-  border: 1px solid var(--gray);
-  transition: background-color var(--transition-base),
-    color var(--transition-base);
-}
-
-.button.button-white:hover,
-.button.button-white:active {
-  color: var(--green-100);
-  background-color: var(--bg-main);
-}
-
-.nav-link {
-  font-size: 14px;
-  line-height: 1.28571;
-  color: var(--white);
-}
-
-.nav-list {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-
-.nav-item {
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.29;
-}
-
-.nav-link {
-  display: inline-block;
-  position: relative;
-}
-
-.nav-link::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -4px;
-  width: 0;
-  height: 2px;
-  z-index: 1;
-
-  background-color: var(--bg-accent);
-
-  transition: width var(--transition-base);
-}
-
-.nav-link:hover::after,
-.nav-link:focus::after {
-  width: 100%;
-}
-
-.social-list {
-  display: flex;
-  gap: 12px;
-}
-
-.social-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  padding: 8px;
-
-  border: var(--icons-border) 1px solid;
-  border-radius: 10px;
-
-  transition: var(--transition-base);
-}
-
-.social-link:hover,
-.social-link:focus {
-  border-color: var(--icons-border-color);
-}
-
-.social-icon {
-  width: 26px;
-  height: 26px;
-  fill: var(--icons-footer);
-  transition: fill var(--transition-base);
-}
-
-.social-link:hover .social-icon,
-.social-link:focus .social-icon {
-  fill: var(--bg-accent);
-}
-
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
   :root {
@@ -194,7 +79,7 @@ button {
   }
 
   .section {
-    padding: var(--container-pd-md);
+    padding: var(--section-pd-md);
   }
 
   .section-title {
@@ -208,23 +93,13 @@ button {
 
   .section-text-support {
     font-size: 18px;
-  }
-
-  .button {
-    font-size: 18px;
-    width: auto;
-    padding: 16px 64px;
-  }
-
-  .social-icon {
-    width: 28px;
-    height: 28px;
+    line-height: 1.66667;
   }
 }
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1280px) {
   .section {
-    padding: var(--container-pd-lg);
+    padding: var(--section-pd-lg);
   }
 
   .section-text-support {
