--- a/src/css/header.css
+++ b/src/css/header.css
@@ -42,7 +42,6 @@
 }
 
 .header-nav-list .nav-link {
-  padding: 33px 0;
   color: var(--black);
 }
 
@@ -58,6 +57,18 @@
 .header-container .social-icon {
   fill: var(--black);
   opacity: 0.8;
+}
+
+/* Styles for Tablet devices */
+@media only screen and (min-width: 768px) {
+  .burger-btn {
+    padding: 14px 0;
+  }
+
+  .burger-icon {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 /* Styles for Desktop devices */
@@ -77,6 +88,10 @@
   .header-nav-list,
   .header-container .social-list {
     display: flex;
+  }
+
+  .header-container .social-link {
+    padding: 7px;
   }
 }
 
