--- a/src/css/modal-menu.css
+++ b/src/css/modal-menu.css
@@ -42,9 +42,10 @@
 }
 
 .modal-overlay .nav-list {
-  height: 55%;
+  height: 60%;
   justify-content: flex-end;
   gap: 20px;
+  text-align: center;
 }
 
 .modal-overlay .nav-link::after {
