--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -1,9 +1,10 @@
 <section>
   <div class="container">
+    <h2 class="visually-hidden">Our Proposal</h2>
     <div class="proposal-container">
-      <h2 class="proposal-title">
+      <h3 class="proposal-title">
         Master the <span>Language</span> with Our English Package!
-      </h2>
+      </h3>
       <div class="proposal-stack">
         <div class="proposal-thumb">
           <div class="proposal-info">
