--- a/src/css/var.css
+++ b/src/css/var.css
@@ -10,6 +10,7 @@
   --green-50: #4dc274;
   --green-100: #38ae5f;
   --gray: #ffffff99; /* 0.6 opacity */
+  --gray-50: #ffffff80;
   --light-gray: #ffffff1a; /* 0.1 opacity */
   --white: #fff;
 
