--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -1,4 +1,4 @@
-<section>
+<section id="proposal">
   <div class="container">
     <h2 class="visually-hidden">Our Proposal</h2>
     <div class="proposal-container">
