--- a/src/partials/application-form.html
+++ b/src/partials/application-form.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section id="application-form" class="section">
   <div class="container">
     <h2 class="section-title">
       Leave an <span class="text-decor">application</span>
