added anchor button

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header id="header" class="header">
   <div class="container header-container">
     <nav class="nav-header">
       <load src="/partials/logo.html" list-class="logo" />
