--- a/src/css/components.css
+++ b/src/css/components.css
@@ -40,7 +40,6 @@ button {
 .nav-list {
   display: flex;
   flex-direction: column;
-  gap: 16px;
 }
 
 .nav-item {
@@ -49,8 +48,11 @@ button {
   line-height: 1.29;
 }
 
+.nav-item:not(:last-child) {
+  margin-bottom: 16px;
+}
+
 .nav-link {
-  display: inline-block;
   position: relative;
 }
 
@@ -62,15 +64,17 @@ button {
   width: 0;
   height: 2px;
   z-index: 1;
+  opacity: 0;
 
   background-color: var(--bg-accent);
 
-  transition: width var(--transition-base);
+  transition: width var(--transition-base), opacity var(--transition-base);
 }
 
 .nav-link:hover::after,
 .nav-link:focus::after {
-  width: 100%;
+  width: 37px;
+  opacity: 1;
 }
 
 .social-list {
