--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -45,7 +45,9 @@
               </li>
             </ul>
             <div class="proposal-link-thumb">
-              <a class="link-button" href="#">Leave an application</a>
+              <a class="link-button" href="#application-form"
+                >Leave an application</a
+              >
             </div>
           </div>
           <div class="proposal-img-wrap">
