--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-  <div class="container">
+  <div class="container container-big">
     <h1 class="hero-title">
       Discover the joy of learning
       <span class="title-accent">English</span> with us!
