--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -31,8 +31,8 @@
       <div class="about-container-img">
         <img
           class="about-img"
-          srcset="../img/about/about2x.png 2x"
-          src="../img/about/about1x.png"
+          srcset="/img/about/about2x.png 2x"
+          src="/img/about/about1x.png"
           alt="memoji"
           width="254"
           height="211"
