--- a/src/css/about.css
+++ b/src/css/about.css
@@ -17,8 +17,10 @@
 @media screen and (min-width: 1280px) {
   .about-grid {
     flex-direction: row;
+    gap: 32px;
   }
 }
+
 .about-list {
   counter-reset: item;
   list-style-type: none;
@@ -31,8 +33,16 @@
   .about-list {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 32px;
+  }
+  .about-grid {
+    gap: 32px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .about-list {
+    flex: 1;
   }
 }
 
@@ -54,6 +64,7 @@
 @media screen and (min-width: 1280px) {
   .about-item {
     max-width: 325px;
+    width: calc((100% - 32px) / 2);
   }
 }
 
@@ -62,7 +73,6 @@
   position: absolute;
   top: 32px;
   left: 32px;
-
   font-weight: 700;
   font-size: 28px;
   line-height: 1.14;
@@ -71,18 +81,11 @@
 }
 
 .about-item-text {
-  font-family: 'Manrope', sans-serif;
   font-weight: 700;
   font-size: 20px;
-
   line-height: 1.2;
   letter-spacing: -0.02em;
   color: var(--black);
-}
-
-ol {
-  padding-left: 0;
-  margin-top: 0;
 }
 
 .about-container-img {
@@ -93,9 +96,19 @@ ol {
   padding-bottom: 51px;
 }
 
+@media screen and (min-width: 768px) {
+  .about-container-img {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+}
+
 @media screen and (min-width: 1280px) {
   .about-container-img {
     width: 310px;
+    display: flex;
+    padding-top: 70px;
+    padding-bottom: 70px;
   }
 }
 
