--- a/src/css/var.css
+++ b/src/css/var.css
@@ -57,13 +57,18 @@
   /* Container Padding*/
   --container-pd-sm: 0 20px;
   --container-pd-md: 0 32px;
-  --container-pd-lg: 0 128px; 
-  --container-pd-big-lg: 0 64px; 
+  --container-pd-lg: 0 128px;
+  --container-pd-big-lg: 0 64px;
 
   /* Section padding*/
   --section-pd-sm: 40px 0;
   --section-pd-md: 50px 0;
   --section-pd-lg: 75px 0;
+
+  /* Last section padding*/
+  --section-pdb-sm: 80px;
+  --section-pdb-md: 100px;
+  --section-pdb-lg: 150px;
 
   /* ⚡ Animation */
   --transition-base: 250ms cubic-bezier(0.4, 0, 0.2, 1);
