--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -8,27 +8,27 @@
 
     <div class="about-grid">
       <ol class="about-list">
-        <li class="about-item">
+        <li class="about-item" data-anim="fade-up" data-delay="100">
           <span class="about-item-text">Expert, innovative teaching staff</span>
         </li>
-        <li class="about-item">
+        <li class="about-item" data-anim="fade-up" data-delay="100">
           <span class="about-item-text"
             >Wide range of course levels and options</span
           >
         </li>
-        <li class="about-item">
+        <li class="about-item" data-anim="fade-up" data-delay="100">
           <span class="about-item-text"
             >Multicultural learning environment</span
           >
         </li>
-        <li class="about-item">
+        <li class="about-item" data-anim="fade-up" data-delay="100">
           <span class="about-item-text"
             >Comprehensive language support services</span
           >
         </li>
       </ol>
 
-      <div class="about-container-img">
+      <div class="about-container-img" data-anim="fade-up" data-delay="100">
         <img
           class="about-img"
           srcset="/img/about/about2x.png 2x"
