--- a/src/partials/teachers.html
+++ b/src/partials/teachers.html
@@ -8,7 +8,7 @@
       journey to English proficiency with personalized and engaging instruction
     </p>
     <ul class="t-list">
-      <li class="t-card">
+      <li class="t-card" data-anim="fade-up" data-delay="100">
         <img
           srcset="
             /img/teachers/maria@1x.jpg  1x,
@@ -29,7 +29,7 @@
         </p>
       </li>
 
-      <li class="t-card">
+      <li class="t-card" data-anim="fade-up" data-delay="100">
         <img
           srcset="
             /img/teachers/artem@1x.jpg  1x,
@@ -50,7 +50,7 @@
         </p>
       </li>
 
-      <li class="t-card">
+      <li class="t-card" data-anim="fade-up" data-delay="100">
         <img
           srcset="
             /img/teachers/ilona@1x.jpg  1x,
@@ -72,7 +72,7 @@
         </p>
       </li>
 
-      <li class="t-card">
+      <li class="t-card" data-anim="fade-up" data-delay="100">
         <img
           srcset="
             /img/teachers/volodymyr@1x.jpg  1x,
