--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -1,4 +1,4 @@
-<section id="proposal">
+<section class="section" id="proposal">
   <div class="container container-big">
     <h2 class="visually-hidden">Our Proposal</h2>
     <div class="proposal-container">
