--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -8,7 +8,7 @@
       their experiences, progress, and the transformative impact
     </p>
     <ul class="rev-list">
-      <li class="rev-card">
+      <li class="rev-card" data-anim="zoom-in" data-delay="100">
         <div class="rev-card-student">
           <img
             class="student-image"
@@ -29,7 +29,7 @@
           stimulating. I feel more confident in my English skills.
         </p>
       </li>
-      <li class="rev-card">
+      <li class="rev-card" data-anim="zoom-in" data-delay="100">
         <div class="rev-card-student">
           <img
             class="student-image"
@@ -53,7 +53,7 @@
           improve my weak areas.
         </p>
       </li>
-      <li class="rev-card">
+      <li class="rev-card" data-anim="zoom-in" data-delay="100">
         <div class="rev-card-student">
           <img
             class="student-image"
