added typing animation

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,9 +1,12 @@
 <section class="hero">
   <div class="container container-big">
     <div class="hero-inner-container">
-      <h1 class="hero-title">
-        Discover the joy of learning
-        <span class="title-accent">English</span> with us!
+      <h1 class="hero-title typing">
+        <span class="line l1">Discover the joy of</span>
+        <span class="line l2">
+          learning <span class="title-accent">English</span></span
+        >
+        <span class="line l3"> with us!</span>
       </h1>
       <a href="#application-form" class="button hero-btn"
         >Leave an application</a
