--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -87,7 +87,65 @@
   font-weight: 700;
   color: var(--white);
   margin-bottom: 30px;
+  position: relative;
 }
+
+.hero-title.typing .line {
+  position: relative;
+  overflow: hidden;
+  white-space: nowrap;
+  -webkit-mask-image: linear-gradient(90deg, #000 0 0);
+  mask-image: linear-gradient(90deg, #000 0 0);
+  -webkit-mask-size: 0% 100%;
+  mask-size: 0% 100%;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  animation: reveal var(--dur, 1.2s) ease forwards var(--delay, 0s);
+}
+
+.hero-title.typing .line:nth-child(3)::after {
+  content: '|';
+  position: absolute;
+  right: -0.2em;
+  color: var(--white);
+
+  animation: blink 0.7s steps(1) infinite;
+
+  animation-delay: var(--delay, 0s),
+    calc(var(--delay, 0s) + var(--dur, 1.2s) - 0.05s);
+}
+
+.hero-title.typing .l1 {
+  --delay: 0s;
+  --dur: 1.5s;
+}
+.hero-title.typing .l2 {
+  --delay: 1.6s;
+  --dur: 1.2s;
+}
+.hero-title.typing .l3 {
+  --delay: 2.9s;
+  --dur: 1.7s;
+}
+
+@keyframes blink {
+  0%,
+  50% {
+    opacity: 1;
+  }
+  50.1%,
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes reveal {
+  to {
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero-title {
     font-size: 60px;
