--- a/src/css/lessons.css
+++ b/src/css/lessons.css
@@ -40,7 +40,7 @@
   font-family: var(--font-family);
   font-weight: 700;
   font-size: 32px;
-  line-height: 112%;
+  line-height: 1.38;
   letter-spacing: -0.02em;
   text-align: center;
   color: var(--black);
