--- a/src/css/link-button.css
+++ b/src/css/link-button.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 52px;
   font-weight: 700;
-  line-height: 24px;
+  line-height: 1.5;
   color: var(--text-invert);
   border-radius: 12px;
   background-color: var(--green-50);
@@ -21,7 +21,7 @@
 @media only screen and (min-width: 768px) {
   .link-button {
     font-size: 18px;
-    line-height: 28px;
+    line-height: 1.56;
     height: 60px;
   }
 }
