update img to picture, add defer for some scripts

--- a/src/partials/application-form.html
+++ b/src/partials/application-form.html
@@ -1,4 +1,4 @@
-<section class="section form-section">
+<section class="section form-section" id="feedback-form">
   <div class="container">
     <h2 class="section-title">
       Leave an <span class="text-decor">application</span>
