--- a/src/partials/teachers.html
+++ b/src/partials/teachers.html
@@ -8,20 +8,25 @@
       journey to English proficiency with personalized and engaging instruction
     </p>
     <ul class="t-list">
+
       <li class="t-card" data-anim="fade-up" data-delay="100">
-        <img
-          srcset="
-            /img/teachers/maria@1x.jpg  1x,
-            /img/teachers/maria@2x.jpg  2x,
-            /img/teachers/maria@1x.avif 1x,
-            /img/teachers/maria@2x.avif 2x
-          "
-          class="t-card-image"
-          src="/img/teachers/maria@1x.jpg"
-          alt="Maria"
-          width="150"
-          height="150"
-        />
+        <picture>
+          <source
+            srcset="/img/teachers/maria@1x.avif 1x, /img/teachers/maria@2x.avif 2x"
+            type="image/avif"
+          />
+          <source
+            srcset="/img/teachers/maria@1x.jpg 1x, /img/teachers/maria@2x.jpg 2x"
+            type="image/jpeg"
+          />
+          <img
+            src="/img/teachers/maria@1x.jpg"
+            alt="Maria"
+            width="150"
+            height="150"
+            class="t-card-image"
+          />
+        </picture>
         <h3 class="t-card-title">Maria</h3>
         <p class="t-card-text">
           A seasoned linguist and our primary specialist in beginner-level
@@ -30,19 +35,23 @@
       </li>
 
       <li class="t-card" data-anim="fade-up" data-delay="100">
-        <img
-          srcset="
-            /img/teachers/artem@1x.jpg  1x,
-            /img/teachers/artem@2x.jpg  2x,
-            /img/teachers/artem@1x.avif 1x,
-            /img/teachers/artem@2x.avif 2x
-          "
-          class="t-card-image"
-          src="/img/teachers/artem@1x.jpg"
-          alt="Artem"
-          width="150"
-          height="150"
-        />
+        <picture>
+          <source
+            srcset="/img/teachers/artem@1x.avif 1x, /img/teachers/artem@2x.avif 2x"
+            type="image/avif"
+          />
+          <source
+            srcset="/img/teachers/artem@1x.jpg 1x, /img/teachers/artem@2x.jpg 2x"
+            type="image/jpeg"
+          />
+          <img
+            src="/img/teachers/artem@1x.jpg"
+            alt="Artem"
+            width="150"
+            height="150"
+            class="t-card-image"
+          />
+        </picture>
         <h3 class="t-card-title">Artem</h3>
         <p class="t-card-text">
           With his innovative teaching techniques and a focus on interactive
@@ -51,19 +60,23 @@
       </li>
 
       <li class="t-card" data-anim="fade-up" data-delay="100">
-        <img
-          srcset="
-            /img/teachers/ilona@1x.jpg  1x,
-            /img/teachers/ilona@2x.jpg  2x,
-            /img/teachers/ilona@1x.avif 1x,
-            /img/teachers/ilona@2x.avif 2x
-          "
-          class="t-card-image"
-          src="/img/teachers/ilona@1x.jpg"
-          alt="Ilona"
-          width="150"
-          height="150"
-        />
+        <picture>
+          <source
+            srcset="/img/teachers/ilona@1x.avif 1x, /img/teachers/ilona@2x.avif 2x"
+            type="image/avif"
+          />
+          <source
+            srcset="/img/teachers/ilona@1x.jpg 1x, /img/teachers/ilona@2x.jpg 2x"
+            type="image/jpeg"
+          />
+          <img
+            src="/img/teachers/ilona@1x.jpg"
+            alt="Ilona"
+            width="150"
+            height="150"
+            class="t-card-image"
+          />
+        </picture>
         <h3 class="t-card-title">Ilona</h3>
         <p class="t-card-text">
           A specialist in advanced English, Ilona provides intensive
@@ -73,19 +86,23 @@
       </li>
 
       <li class="t-card" data-anim="fade-up" data-delay="100">
-        <img
-          srcset="
-            /img/teachers/volodymyr@1x.jpg  1x,
-            /img/teachers/volodymyr@2x.jpg  2x,
-            /img/teachers/volodymyr@1x.avif 1x,
-            /img/teachers/volodymyr@2x.avif 2x
-          "
-          class="t-card-image"
-          src="/img/teachers/volodymyr@1x.jpg"
-          alt="Volodymyr"
-          width="150"
-          height="150"
-        />
+        <picture>
+          <source
+            srcset="/img/teachers/volodymyr@1x.avif 1x, /img/teachers/volodymyr@2x.avif 2x"
+            type="image/avif"
+          />
+          <source
+            srcset="/img/teachers/volodymyr@1x.jpg 1x, /img/teachers/volodymyr@2x.jpg 2x"
+            type="image/jpeg"
+          />
+          <img
+            src="/img/teachers/volodymyr@1x.jpg"
+            alt="Volodymyr"
+            width="150"
+            height="150"
+            class="t-card-image"
+          />
+        </picture>
         <h3 class="t-card-title">Volodymyr</h3>
         <p class="t-card-text">
           Our expert in English for specific purposes, Volodymyr tailors his
@@ -93,6 +110,7 @@
           needs
         </p>
       </li>
+
     </ul>
   </div>
 </section>
