added team photos

--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -142,3 +142,16 @@
 .swiper-button-prev {
   left: -35px;
 }
+
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: -30px;
+}
+
+.swiper-pagination-bullet {
+  background: var(--green-50);
+  width: 10px;
+  height: 10px;
+}
