--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -64,7 +64,7 @@
             </p>
           </div>
 
-          <!-- Slide 3 -->
+          <!-- Slide 3-->
           <div class="swiper-slide rev-card">
             <div class="rev-card-student">
               <img
@@ -89,13 +89,221 @@
               have definitely seen a big improvement in my language skills.
             </p>
           </div>
+
+          <!-- Slide 4-->
+          <div class="swiper-slide rev-card">
+            <div class="rev-card-student">
+              <img
+                class="student-image"
+                srcset="
+                  /img/students/taras@1x.png 1x,
+                  /img/students/taras@2x.png 2x
+                "
+                src="/img/students/taras@1x.png"
+                alt="Taras"
+                width="50"
+                height="50"
+              />
+              <div class="student-name-text">
+                <h3 class="student-name">Taras</h3>
+                <p class="student-text">Team lead</p>
+              </div>
+            </div>
+            <p class="rev-card-feedback">
+              I love the dynamic and interactive teaching methods used here.
+              It's a great place to learn English in a fun and effective way. I
+              have definitely seen a big improvement in my language skills.
+            </p>
+          </div>
+
+          <!-- Slide 5-->
+          <div class="swiper-slide rev-card">
+            <div class="rev-card-student">
+              <img
+                class="student-image"
+                srcset="
+                  /img/students/daryna@1x.png 1x,
+                  /img/students/daryna@2x.png 2x
+                "
+                src="/img/students/daryna@1x.png"
+                alt="Daryna"
+                width="50"
+                height="50"
+              />
+              <div class="student-name-text">
+                <h3 class="student-name">Daryna</h3>
+                <p class="student-text">Scram master</p>
+              </div>
+            </div>
+            <p class="rev-card-feedback">
+              Great work, amazing team! I’m absolutely delighted with the
+              result. With custom enhancements the site looks much more
+              interesting!
+            </p>
+          </div>
+
+          <!-- Slide 6-->
+          <div class="swiper-slide rev-card">
+            <div class="rev-card-student">
+              <img
+                class="student-image"
+                srcset="
+                  /img/students/mykola@1x.png 1x,
+                  /img/students/mykola@2x.png 2x
+                "
+                src="/img/students/mykola@1x.png"
+                alt="Mykola"
+                width="50"
+                height="50"
+              />
+              <div class="student-name-text">
+                <h3 class="student-name">Mykola</h3>
+                <p class="student-text">Dev</p>
+              </div>
+            </div>
+            <p class="rev-card-feedback">
+              I truly enjoyed collaborating with my team—everyone contributed
+              meaningfully, and the synergy made the process smooth and
+              rewarding. Proud of what we accomplished together!
+            </p>
+          </div>
+
+          <!-- Slide 7-->
+          <div class="swiper-slide rev-card">
+            <div class="rev-card-student">
+              <img
+                class="student-image"
+                srcset="
+                  /img/students/artem@1x.png 1x,
+                  /img/students/artem@2x.png 2x
+                "
+                src="/img/students/artem@1x.png"
+                alt="Artem"
+                width="50"
+                height="50"
+              />
+              <div class="student-name-text">
+                <h3 class="student-name">Artem</h3>
+                <p class="student-text">Dev</p>
+              </div>
+            </div>
+            <p class="rev-card-feedback">
+              I really enjoyed working with the team — everyone collaborated
+              seamlessly, like a well-oiled machine, supporting each other at
+              every stage of the process.
+            </p>
+          </div>
+
+          <!-- Slide 8-->
+          <div class="swiper-slide rev-card">
+            <div class="rev-card-student">
+              <img
+                class="student-image"
+                srcset="
+                  /img/students/viktor@1x.png 1x,
+                  /img/students/viktor@2x.png 2x
+                "
+                src="/img/students/viktor@1x.png"
+                alt="Viktor"
+                width="50"
+                height="50"
+              />
+              <div class="student-name-text">
+                <h3 class="student-name">Viktor</h3>
+                <p class="student-text">Dev</p>
+              </div>
+            </div>
+            <p class="rev-card-feedback">
+              I really enjoyed working with the team — everyone collaborated
+              seamlessly, like a well-oiled machine, supporting each other at
+              every stage of the process.
+            </p>
+          </div>
+
+          <!-- Slide 9-->
+          <div class="swiper-slide rev-card">
+            <div class="rev-card-student">
+              <img
+                class="student-image"
+                srcset="
+                  /img/students/julia@1x.png 1x,
+                  /img/students/julia@2x.png 2x
+                "
+                src="/img/students/julia@1x.png"
+                alt="Julia"
+                width="50"
+                height="50"
+              />
+              <div class="student-name-text">
+                <h3 class="student-name">Julia</h3>
+                <p class="student-text">Dev</p>
+              </div>
+            </div>
+            <p class="rev-card-feedback">
+              I really enjoyed working with the team — everyone collaborated
+              seamlessly, like a well-oiled machine, supporting each other at
+              every stage of the process.
+            </p>
+          </div>
+
+          <!-- Slide 10-->
+          <div class="swiper-slide rev-card">
+            <div class="rev-card-student">
+              <img
+                class="student-image"
+                srcset="
+                  /img/students/alex@1x.png 1x,
+                  /img/students/alex@2x.png 2x
+                "
+                src="/img/students/alex@1x.png"
+                alt="Alex"
+                width="50"
+                height="50"
+              />
+              <div class="student-name-text">
+                <h3 class="student-name">Alex</h3>
+                <p class="student-text">Dev</p>
+              </div>
+            </div>
+            <p class="rev-card-feedback">
+              I really enjoyed working with the team — everyone collaborated
+              seamlessly, like a well-oiled machine, supporting each other at
+              every stage of the process.
+            </p>
+          </div>
+
+          <!-- Slide 11-->
+          <div class="swiper-slide rev-card">
+            <div class="rev-card-student">
+              <img
+                class="student-image"
+                srcset="
+                  /img/students/vasyl@1x.png 1x,
+                  /img/students/vasyl@2x.png 2x
+                "
+                src="/img/students/vasyl@1x.png"
+                alt="Vasyl"
+                width="50"
+                height="50"
+              />
+              <div class="student-name-text">
+                <h3 class="student-name">Vasyl</h3>
+                <p class="student-text">Dev</p>
+              </div>
+            </div>
+            <p class="rev-card-feedback">
+              I really enjoyed working with the team — everyone collaborated
+              seamlessly, like a well-oiled machine, supporting each other at
+              every stage of the process.
+            </p>
+          </div>
         </div>
       </div>
       <!-- Navigation buttons -->
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
       <!-- Pagination -->
-      <!-- <div class="swiper-pagination"></div> -->
+      <div class="swiper-pagination"></div>
     </div>
   </div>
 </section>
