added counter animation

--- a/src/partials/application-form.html
+++ b/src/partials/application-form.html
@@ -1,4 +1,4 @@
-<section class="section form-section">
+<section id="application-form" class="section form-section">
   <div class="container">
     <h2 class="section-title">
       Leave an <span class="text-decor">application</span>
@@ -20,7 +20,7 @@
         />
 
         <div class="description-img">
-          <p class="title-support">1000</p>
+          <p class="title-support counter">1000</p>
           <p>
             of our online English language lessons! This journey has been full
             of discovery, growth and unforgettable moments, and we are happy to
