--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -16,7 +16,9 @@
           collaborative language exercises and group activities, boosting their
           conversational skills and confidence in using English.
         </p>
-        <a href="#application-form" class="link-button">Leave an application</a>
+        <a href="#application-form" class="button link-button"
+          >Leave an application</a
+        >
       </li>
 
       <li
@@ -31,7 +33,9 @@
           all key areas of English language – reading, writing, listening, and
           speaking. It is a set of basic knowledge and skills.
         </p>
-        <a href="#application-form" class="link-button">Leave an application</a>
+        <a href="#application-form" class="button link-button"
+          >Leave an application</a
+        >
       </li>
 
       <li class="lessons-card" data-anim="zoom-in" data-delay="100">
@@ -42,7 +46,9 @@
           instruction that focuses on a learner’s specific language goals and
           challenges, offering personal feedback.
         </p>
-        <a href="#application-form" class="link-button">Leave an application</a>
+        <a href="#application-form" class="button link-button"
+          >Leave an application</a
+        >
       </li>
     </ul>
   </div>
