--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -45,7 +45,7 @@
               </li>
             </ul>
             <div class="proposal-link-thumb">
-              <a class="link-button" href="#application-form"
+              <a class="button link-button" href="#application-form"
                 >Leave an application</a
               >
             </div>
