--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -132,7 +132,7 @@
               />
               <div class="student-name-text">
                 <h3 class="student-name">Daryna</h3>
-                <p class="student-text">Scram master</p>
+                <p class="student-text">Scrum master</p>
               </div>
             </div>
             <p class="rev-card-feedback">
@@ -240,9 +240,10 @@
               </div>
             </div>
             <p class="rev-card-feedback">
-              I really enjoyed working with the team — everyone collaborated
-              seamlessly, like a well-oiled machine, supporting each other at
-              every stage of the process.
+              Clear structure, modern design, and effective teamwork. Our
+              communication kept the process smooth and productive. This
+              collaboration was a true pleasure, and the result reflects our
+              shared effort.
             </p>
           </div>
 
@@ -266,9 +267,9 @@
               </div>
             </div>
             <p class="rev-card-feedback">
-              I really enjoyed working with the team — everyone collaborated
-              seamlessly, like a well-oiled machine, supporting each other at
-              every stage of the process.
+              I am always happy to welcome new people to our team, as it brings
+              fresh ideas and energy. Collaboration helps me improve my HTML and
+              CSS skills, making projects more high-quality and engaging.
             </p>
           </div>
 
