--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -93,26 +93,33 @@
 .hero-title.typing .line {
   position: relative;
   overflow: hidden;
-  white-space: nowrap;
-  -webkit-mask-image: linear-gradient(90deg, #000 0 0);
-  mask-image: linear-gradient(90deg, #000 0 0);
-  -webkit-mask-size: 0% 100%;
-  mask-size: 0% 100%;
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
-  animation: reveal var(--dur, 1.2s) ease forwards var(--delay, 0s);
 }
 
-.hero-title.typing .line:nth-child(3)::after {
-  content: '|';
-  position: absolute;
-  right: -0.2em;
-  color: var(--green-30);
+@media screen and (min-width: 768px) {
+  .hero-title.typing .line {
+    white-space: nowrap;
 
-  animation: blink 0.7s steps(1) infinite;
+    -webkit-mask-image: linear-gradient(90deg, #000 0 0);
+    mask-image: linear-gradient(90deg, #000 0 0);
+    -webkit-mask-size: 0% 100%;
+    mask-size: 0% 100%;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
 
-  animation-delay: var(--delay, 0s),
-    calc(var(--delay, 0s) + var(--dur, 1.2s) - 0.05s);
+    animation: reveal var(--dur, 1.2s) ease forwards var(--delay, 0s);
+  }
+
+  .hero-title.typing .line:nth-child(3)::after {
+    content: '|';
+    position: absolute;
+    right: -0.2em;
+    color: var(--green-30);
+
+    animation: blink 0.7s steps(1) infinite;
+
+    animation-delay: var(--delay, 0s),
+      calc(var(--delay, 0s) + var(--dur, 1.2s) - 0.05s);
+  }
 }
 
 .hero-title.typing .l1 {
@@ -196,7 +203,6 @@
 .hero-btn {
   display: flex;
   justify-content: center;
-  min-width: 295px;
 }
 @media screen and (min-width: 768px) {
   .hero-btn {
