add readme, delete assets folder, add aria-label and aria-hidden to svg

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,8 +11,8 @@
       <a href="#application-form" class="button hero-btn"
         >Leave an application</a
       >
-      <a href="#footer" class="arrow-down">
-        <svg class="arrow-down-icon" width="20" height="20">
+      <a href="#footer" class="arrow-down" aria-label="Go to footer">
+        <svg class="arrow-down-icon" width="20" height="20" aria-hidden="true">
           <use href="/img/sprite.svg#arrow-down"></use>
         </svg>
       </a>
