--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -11,7 +11,7 @@
             <h3 class="proposal-subtitle">Power of English</h3>
             <ul class="proposal-list">
               <li class="proposal-item">
-                <div class="proposal-wrap-icon">
+                <div class="proposal-wrap-icon" aria-hidden="true">
                   <svg class="proposal-icon" width="20" height="20">
                     <use href="./img/sprite.svg#check"></use>
                   </svg>
@@ -22,7 +22,7 @@
                 </p>
               </li>
               <li class="proposal-item">
-                <div class="proposal-wrap-icon">
+                <div class="proposal-wrap-icon" aria-hidden="true">
                   <svg class="proposal-icon" width="20" height="20">
                     <use href="./img/sprite.svg#check"></use>
                   </svg>
@@ -33,7 +33,7 @@
                 </p>
               </li>
               <li class="proposal-item">
-                <div class="proposal-wrap-icon">
+                <div class="proposal-wrap-icon" aria-hidden="true">
                   <svg class="proposal-icon" width="20" height="20">
                     <use href="./img/sprite.svg#check"></use>
                   </svg>
