--- a/src/partials/anchor-button.html
+++ b/src/partials/anchor-button.html
@@ -1,4 +1,5 @@
-<a href="#header" class="arrow-down anchor-button">
-  <svg class="arrow-top-icon" width="20" height="20">
-    <use href="/img/sprite.svg#arrow-down"></use></svg
-></a>
+<a href="#header" class="arrow-down anchor-button" aria-label="Go to header">
+  <svg class="arrow-top-icon" width="20" height="20" aria-hidden="true">
+    <use href="/img/sprite.svg#arrow-down"></use>
+  </svg>
+</a>
