--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,8 +5,8 @@
       <load src="/partials/nav-list.html" list-class="header-nav-list" />
     </nav>
     <load src="/partials/socials.html" />
-    <button class="burger-btn" type="button" data-menu-open>
-      <svg class="burger-icon" width="32" height="32">
+    <button class="burger-btn" type="button" data-menu-open aria-label="Open menu">
+      <svg class="burger-icon" width="32" height="32" aria-hidden="true">
         <use href="img/sprite.svg#burger"></use>
       </svg>
     </button>
