--- a/src/partials/modal-menu.html
+++ b/src/partials/modal-menu.html
@@ -1,8 +1,8 @@
 <!-- <div class="mobile-menu">123</div> -->
 <div class="modal-overlay" data-menu>
   <div class="modal">
-    <button class="modal-close-btn" type="button" data-menu-close>
-      <svg class="burger-icon" width="32" height="32">
+    <button class="modal-close-btn" type="button" data-menu-close aria-label="Close menu">
+      <svg class="burger-icon" width="32" height="32" aria-hidden="true">
         <use href="img/sprite.svg#close"></use>
       </svg>
     </button>
