--- a/src/partials/socials.html
+++ b/src/partials/socials.html
@@ -5,8 +5,9 @@
       target="_blank"
       rel="noopener noreferrer"
       class="social-link"
+      aria-label="Facebook"
     >
-      <svg width="28" height="28" class="social-icon">
+      <svg width="28" height="28" class="social-icon" aria-hidden="true">
         <use href="/img/sprite.svg#facebook"></use>
       </svg>
     </a>
@@ -17,8 +18,9 @@
       target="_blank"
       rel="noopener noreferrer"
       class="social-link"
+      aria-label="Instagram"
     >
-      <svg width="28" height="28" class="social-icon">
+      <svg width="28" height="28" class="social-icon" aria-hidden="true">
         <use href="/img/sprite.svg#instagram"></use>
       </svg>
     </a>
@@ -29,8 +31,9 @@
       target="_blank"
       rel="noopener noreferrer"
       class="social-link"
+      aria-label="YouTube"
     >
-      <svg width="28" height="28" class="social-icon">
+      <svg width="28" height="28" class="social-icon" aria-hidden="true">
         <use href="/img/sprite.svg#youtube"></use>
       </svg>
     </a>
