--- a/src/partials/teachers.html
+++ b/src/partials/teachers.html
@@ -8,15 +8,20 @@
       journey to English proficiency with personalized and engaging instruction
     </p>
     <ul class="t-list">
-
       <li class="t-card" data-anim="fade-up" data-delay="100">
         <picture>
           <source
-            srcset="/img/teachers/maria@1x.avif 1x, /img/teachers/maria@2x.avif 2x"
+            srcset="
+              /img/teachers/maria@1x.avif 1x,
+              /img/teachers/maria@2x.avif 2x
+            "
             type="image/avif"
           />
           <source
-            srcset="/img/teachers/maria@1x.jpg 1x, /img/teachers/maria@2x.jpg 2x"
+            srcset="
+              /img/teachers/maria@1x.jpg 1x,
+              /img/teachers/maria@2x.jpg 2x
+            "
             type="image/jpeg"
           />
           <img
@@ -25,6 +30,7 @@
             width="150"
             height="150"
             class="t-card-image"
+            loading="lazy"
           />
         </picture>
         <h3 class="t-card-title">Maria</h3>
@@ -37,11 +43,17 @@
       <li class="t-card" data-anim="fade-up" data-delay="100">
         <picture>
           <source
-            srcset="/img/teachers/artem@1x.avif 1x, /img/teachers/artem@2x.avif 2x"
+            srcset="
+              /img/teachers/artem@1x.avif 1x,
+              /img/teachers/artem@2x.avif 2x
+            "
             type="image/avif"
           />
           <source
-            srcset="/img/teachers/artem@1x.jpg 1x, /img/teachers/artem@2x.jpg 2x"
+            srcset="
+              /img/teachers/artem@1x.jpg 1x,
+              /img/teachers/artem@2x.jpg 2x
+            "
             type="image/jpeg"
           />
           <img
@@ -50,6 +62,7 @@
             width="150"
             height="150"
             class="t-card-image"
+            loading="lazy"
           />
         </picture>
         <h3 class="t-card-title">Artem</h3>
@@ -62,11 +75,17 @@
       <li class="t-card" data-anim="fade-up" data-delay="100">
         <picture>
           <source
-            srcset="/img/teachers/ilona@1x.avif 1x, /img/teachers/ilona@2x.avif 2x"
+            srcset="
+              /img/teachers/ilona@1x.avif 1x,
+              /img/teachers/ilona@2x.avif 2x
+            "
             type="image/avif"
           />
           <source
-            srcset="/img/teachers/ilona@1x.jpg 1x, /img/teachers/ilona@2x.jpg 2x"
+            srcset="
+              /img/teachers/ilona@1x.jpg 1x,
+              /img/teachers/ilona@2x.jpg 2x
+            "
             type="image/jpeg"
           />
           <img
@@ -75,6 +94,7 @@
             width="150"
             height="150"
             class="t-card-image"
+            loading="lazy"
           />
         </picture>
         <h3 class="t-card-title">Ilona</h3>
@@ -88,11 +108,17 @@
       <li class="t-card" data-anim="fade-up" data-delay="100">
         <picture>
           <source
-            srcset="/img/teachers/volodymyr@1x.avif 1x, /img/teachers/volodymyr@2x.avif 2x"
+            srcset="
+              /img/teachers/volodymyr@1x.avif 1x,
+              /img/teachers/volodymyr@2x.avif 2x
+            "
             type="image/avif"
           />
           <source
-            srcset="/img/teachers/volodymyr@1x.jpg 1x, /img/teachers/volodymyr@2x.jpg 2x"
+            srcset="
+              /img/teachers/volodymyr@1x.jpg 1x,
+              /img/teachers/volodymyr@2x.jpg 2x
+            "
             type="image/jpeg"
           />
           <img
@@ -101,6 +127,7 @@
             width="150"
             height="150"
             class="t-card-image"
+            loading="lazy"
           />
         </picture>
         <h3 class="t-card-title">Volodymyr</h3>
@@ -110,7 +137,6 @@
           needs
         </p>
       </li>
-
     </ul>
   </div>
 </section>
